[package]
name = "awesome-app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
apalis = { version = "0.3", features=["redis", "extensions"] }
serde = "1"
actix-rt = "2"
actix-web = "4"
futures = "0.3"
env_logger = "0.7"
